--- a/sub/20251122-1y.yml
+++ b/sub/20251122-1y.yml
@@ -40,7 +40,7 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 自动优选订阅可公开分享
+      - 自动优选
       - Linux do
       - Temu
       - Cloudflare Docs
@@ -65,7 +65,7 @@ proxy-groups:
     interval: 300
     tolerance: 50
     proxies:
-      - 自动优选订阅可公开分享
+      - 自动优选
       - Linux do
       - Temu
       - Cloudflare Docs
@@ -90,7 +90,7 @@ proxy-groups:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 自动优选订阅可公开分享
+      - 自动优选
       - Linux do
       - Temu
       - Cloudflare Docs
@@ -114,7 +114,7 @@ proxy-groups:
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 自动优选订阅可公开分享
+      - 自动优选
       - Linux do
       - Temu
       - Cloudflare Docs
@@ -138,7 +138,7 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 自动优选订阅可公开分享
+      - 自动优选
       - Linux do
       - Temu
       - Cloudflare Docs
@@ -162,7 +162,7 @@ proxy-groups:
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 自动优选订阅可公开分享
+      - 自动优选
       - Linux do
       - Temu
       - Cloudflare Docs
@@ -187,7 +187,7 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 自动优选订阅可公开分享
+      - 自动优选
       - Linux do
       - Temu
       - Cloudflare Docs
@@ -228,7 +228,7 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 自动优选订阅可公开分享
+      - 自动优选
       - Linux do
       - Temu
       - Cloudflare Docs
