--- a/.github/workflows/tunnel.yaml
+++ b/.github/workflows/tunnel.yaml
@@ -1,4 +1,4 @@
-name: CF SSH Tunnel (TryCloudflare)
+name: tunnel
 
 on:
   workflow_dispatch:
@@ -28,7 +28,7 @@ jobs:
           echo "External IP: $(curl ifconfig.io)"
 
       # 运行 TryCloudflare 隧道，并将生成的 URL 存储为环境变量
-      - name: Run TryCloudflare SSH Tunnel
+      - name: Run tunnel
         id: tunnel
         run: |
           # 启动 cloudflared 隧道，返回临时隧道的 URL
