--- a/.github/workflows/itdoghttp.yaml
+++ b/.github/workflows/itdoghttp.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install aiohttp
+          pip install aiohttp  # 只需要安装 aiohttp
 
       - name: Run flood script
         run: python sub/actions/itdoghttp.py
