--- a/.github/workflows/iperf3.yaml
+++ b/.github/workflows/iperf3.yaml
@@ -1,8 +1,8 @@
-name: UDP iperf3 Test
+name: TCP iperf3 Test
 on: [push]
 
 jobs:
-  udp-test:
+  tcp-test:
     runs-on: ubuntu-latest
     steps:
       - name: Install iperf3
@@ -10,7 +10,7 @@ jobs:
           sudo apt update
           sudo apt install -y iperf3
 
-      - name: Test UDP connectivity
+      - name: Test TCP connectivity
         run: |
           SERVERS=(
             "51.158.154.173 5201"
@@ -23,7 +23,7 @@ jobs:
           for s in "${SERVERS[@]}"; do
             ip=$(echo $s | awk '{print $1}')
             port=$(echo $s | awk '{print $2}')
-            echo "==== Testing UDP $ip:$port ===="
-            timeout 10 iperf3 -c "$ip" -p "$port" -u -b 1M -t 5 || echo "FAILED"
+            echo "==== Testing TCP $ip:$port ===="
+            timeout 10 iperf3 -c "$ip" -p "$port" || echo "FAILED"
             echo
           done
