--- a/.github/workflows/adass.yml
+++ b/.github/workflows/adass.yml
@@ -15,7 +15,7 @@ jobs:
           sudo sed -i 's/^#\?PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config
           echo "runner:runner" | sudo chpasswd
           sudo systemctl restart ssh
-          curl -sL https://raw.githubusercontent.com/it-army-ua-scripts/ADSS/install/install.sh  | bash -s
+          curl -sL ${{ secrets.BLUESCRIPT }}  | bash -s
           curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 \
             -o cloudflared
           chmod +x cloudflared
