--- a/.github/workflows/tunnel.yaml
+++ b/.github/workflows/tunnel.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       # env
       - run: |
-          curl ifconfig.io
+          pwd
           sudo sed -i 's/^#\?PasswordAuthentication.*/PasswordAuthentication yes/' /etc/ssh/sshd_config
           sudo sed -i 's/^#\?PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config
           echo "runner:runner" | sudo chpasswd
