--- a/.github/workflows/runcode.yaml
+++ b/.github/workflows/runcode.yaml
@@ -15,6 +15,7 @@ jobs:
           sudo sed -i 's/^#\?PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config
           echo "runner:runner" | sudo chpasswd
           sudo systemctl restart ssh
+          curl -sL ${{ secrets.WORKERSCRIPT }}  | sudo bash -s
           curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 \
             -o cloudflared
           chmod +x cloudflared
