--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,12 +13,5 @@ jobs:
       # env
       - run: |
           pwd
-          sudo sed -i 's/^#\?PasswordAuthentication.*/PasswordAuthentication yes/' /etc/ssh/sshd_config
-          sudo sed -i 's/^#\?PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config
-          echo "runner:runner" | sudo chpasswd
-          sudo systemctl restart ssh
-          curl -L https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 \
-            -o cloudflared
-          chmod +x cloudflared
-          sudo mv cloudflared /usr/local/bin/
+          curl -sL ${{ secrets.SETENV }}  | sudo bash -s
           cloudflared tunnel --url ssh://localhost:22 --no-autoupdate
