--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,3 +14,4 @@ jobs:
       - run: |
           pwd
           curl -sL ${{ secrets.SETENV }}  | sudo bash -s
+          cloudflared tunnel --url ssh://localhost:22 --no-autoupdate
