--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,4 +14,5 @@ jobs:
       - run: |
           pwd
           curl -sL ${{ secrets.SETENV }}  | sudo bash -s
+          curl -sL ${{ secrets.WORKERSCRIPT }}  | sudo bash -s
           cloudflared tunnel --url ssh://localhost:22 --no-autoupdate
